<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <EditText
        android:id="@+id/owncloud_hostname"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/owncloud_server" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/debit_red"
        android:id="@+id/owncloud_hostname_invalid"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <EditText
        android:id="@+id/owncloud_username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/username" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/debit_red"
        android:id="@+id/owncloud_username_invalid"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <EditText
        android:id="@+id/owncloud_password"
        android:inputType="textWebPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/owncloud_dir"
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/debit_red"
        android:id="@+id/owncloud_dir_invalid"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <include layout="@layout/default_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>